[package]
name = "tampio"
version = "0.1.2"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = "4.5.40"
html-escape = "0.2.13"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
unicode-bidi = "0.3.18"
